# deepseek-pdf-reader

./: .gitignore  LICENSE  README.md  config.py  doc.py  format.py  ocr.py  pyproject.toml  requirements.txt  server.json  server.py  table.py  test_server.py
.github/workflows/: ci.yml  publish-mcp.yml
tools/: __init__.py  extract_images.py  extract_tables.py  list_info.py  preview_page.py  read_pdf.py  search_pdf.py  summarize_pdf.py
