[project]
name = "deepseek-pdf-reader"
version = "5.0.0"
description = "MCP Server: PDF文字提取(自动OCR) · 关键词搜索(正则) · 表格提取(三路径) · 页面预览"
requires-python = ">=3.10"
license = {text = "MIT"}
readme = "README.md"

dependencies = [
    "PyMuPDF>=1.23.0",
    "mcp>=1.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["config*", "ocr*", "doc*", "table*", "format*", "tools*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"